add some textures, add table and chairs

--- a/project/index.html
+++ b/project/index.html
@@ -225,7 +225,7 @@
 		}
 	</script>
 
-	<!-- <script  id="pick-vertex-shader" type="x-shader/x-vertex">
+	<script  id="pick-vertex-shader" type="x-shader/x-vertex">
 		attribute vec4 a_position;
 		
 		uniform mat4 u_matrix;
@@ -244,7 +244,7 @@
 		void main() {
 		   gl_FragColor = u_id;
 		}
-	  </script> -->
+	  </script>
 	
 	
 </head>
