--- a/project/index.html
+++ b/project/index.html
@@ -202,7 +202,92 @@
 			effectiveOpacity);
 		}
 	</script>
-	
+	<script id="blur-vertex-shader" type="x-shader/x-vertex">
+		attribute vec4 a_position;
+		attribute vec3 a_normal;
+		attribute vec2 a_texcoord;
+		attribute vec4 a_color;
+		
+		uniform mat4 u_projection;          // Projection Matrix
+		uniform mat4 u_view;				// Camera View Matrix
+		uniform mat4 u_world;				// World matrix
+		uniform vec3 u_viewWorldPosition;	// Camera position
+		
+		varying vec3 v_normal;
+		varying vec3 v_surfaceToView;
+		varying vec2 v_texcoord;
+		varying vec4 v_color;
+		varying vec3 vertPos;
+		
+		
+		void main() {
+			vec4 world_position = u_world * a_position;  // World transform
+			gl_Position = u_projection * u_view * world_position; // Transform the location of the vertex
+			v_surfaceToView = u_viewWorldPosition - world_position.xyz;
+			v_normal = mat3(u_world) * a_normal;
+			v_texcoord = a_texcoord;
+			v_color = a_color;
+			vertPos = vec3(world_position);
+		}
+	</script>
+	<script id="blur-fragment-shader" type="x-shader/x-fragment">
+		precision highp float;
+		
+		varying vec3 v_normal;
+		varying vec2 v_texcoord;
+		varying vec4 v_color;
+		varying vec3 v_surfaceToView;
+		varying vec3 vertPos;
+		
+		
+		// Material Properties
+		uniform sampler2D diffuseMap;
+		uniform sampler2D normalMap;
+		uniform vec3 diffuse;
+		uniform vec3 ambient;
+		uniform vec3 emissive;
+		uniform vec3 specular;
+		uniform float shininess;
+		uniform float opacity;
+		
+		// Light Properties
+		uniform vec3 u_lightDirection;
+		uniform vec3 u_lightPosition;
+		uniform vec3 u_lightColor;
+		uniform vec3 u_ambientLight;
+
+		// Sample a group of neighboring texels and apply lighting calculations
+		vec4 averageNeighboringColors(sampler2D texture, vec2 texcoord, float radius) {
+			vec4 totalColor = vec4(0.0);
+			float numSamples = 0.0;
+		
+			for (float dx = -0.020; dx <= 0.020; dx += 0.02) {
+				for (float dy = -0.020; dy <= 0.020; dy += 0.02) {
+					vec2 offset = vec2(dx, dy) / vec2(50.0, 50.0);
+					vec4 sampleColor = texture2D(texture, texcoord + offset);
+					totalColor += sampleColor;
+					numSamples += 1.0;
+				}
+			}
+		
+			return totalColor / numSamples;
+		}
+		
+		void main() {
+			vec3 normal = normalize(v_normal) * (float(gl_FrontFacing) * 2.0 - 1.0);
+			vec3 vertPos = vertPos; // This line should not be necessary, remove if not used elsewhere
+		
+			float fakeLight = dot(normalize(u_lightDirection), normal) * 0.5 + 0.5;
+		
+			// Sample a group of neighboring texels and apply lighting calculations
+			float blurRadius = 0.1;
+
+			// Sample neighboring texels and average their colors
+			vec4 averagedColor = averageNeighboringColors(diffuseMap, v_texcoord, blurRadius);
+
+			gl_FragColor = averagedColor;
+		}	
+	</script>
 	
 	<script  id="color-vertex-shader" type="x-shader/x-vertex">
 		attribute vec4 a_position;
